--- a/src/html/style/main.css
+++ b/src/html/style/main.css
@@ -54,7 +54,7 @@ a:active, a:hover {
 	background: #fff;
 	}
 .datatablechild th {
-	background: #c3c3c3;
+	background-color: #c3c3c3;
 	color: #000;
 	font-weight: normal
 	}
