--- a/src/templates/screens/SaveQuery.vm
+++ b/src/templates/screens/SaveQuery.vm
@@ -38,7 +38,7 @@
   </tr>
  </table>
 </div>
-<div class="functnbar">
+<div class="functnbar2">
 <table cellpadding="4" cellspacing="0" border="1">
  <tr>
   <td class="firstchild"><input type="submit" value="Save/submit" name="eventSubmit_doSavequery" />&#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel"  /></td>
