--- a/src/templates/screens/reports/Step2.vm
+++ b/src/templates/screens/reports/Step2.vm
@@ -45,7 +45,7 @@ seperate column (i.e. side-by-side comparison).</p>
   </tr>
  </table>
 </div>
-<div class="functnbar">
+<div class="functnbar2">
 <table cellpadding="4" cellspacing="0" border="1">
  <tr>
   <td class="firstchild"><input type="submit" value="Continue"  name="eventSubmit_doStep2agoto3" />
