--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -173,7 +173,7 @@ from:&#160;<input type="text" size="20"
     </th>
     <td>
         <input type="text" size=20 name="$query.StateChangeFromDate.Key"
-            value="$query.StateChangeFromDate">&nbsp;
+            value="$query.StateChangeFromDate">&#160;
         to
         <input type="text" size=20 name="$query.StateChangeToDate.Key"
             value="$query.StateChangeToDate">
@@ -196,7 +196,7 @@ from:&#160;<input type="text" size="20"
        $attribute.Name
    </option>
 #end
-</select>&nbsp;
+</select>&#160;
 <select name="$query.InitialSortPolarity.Key">
     <option value="asc">
         ascending
