--- a/src/templates/screens/ConfigureIssueList.vm
+++ b/src/templates/screens/ConfigureIssueList.vm
@@ -1,22 +1,34 @@
-<div class="app" id="configureissuelist">
 $page.setTitle("Add/remove attributes from view")
+
+<div class="app" id="configureissuelist">
+
 <h2>$page.Title</h2>
-#set ($action = $link.setPage("ConfigureIssueList.vm").setAction("ConfigureIssueList").addPathInfo("nextTemplate", "ConfigureIssueList.vm"))
+
+#set ($action = $link.setPage("ConfigureIssueList.vm").setAction("ConfigureIssueList").addPathInfo("nextTemplate", "ConfigureIssueList.vm").toString())
 #set ($user = $data.User)
 #set ($module = $scarabR.CurrentModule)
 #set ($moduleAttributes = $module.getRModuleAttributes(true))
 #set ($maxNum = $moduleAttributes.size())
 #set ($usedefaults = $moduleAttributes.size())
 #set ($usedefaults = $data.Parameters.getString("usedefaults"))
+
 <form action="$action" method="post">
 <input type="hidden" name="user_id" value="$user.UserId" />
 <input type="hidden" name="module_id" value="$module.ModuleId" />
-<div class="functnbar"><table cellpadding="4" cellspacing="0" border="1">
+
+<div class="functnbar">
+<table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td class="firstchild"><input type="submit" value="Save" name="eventSubmit_doSelectattributes" />&nbsp; <input type="submit" value="Cancel" name="eventSubmit_doCancel" />&nbsp; <input type="submit" value="Reset to default"  name="eventSubmit_doCancel" /> <input type="submit" value="Go to issue list"  name="eventSubmit_doGoissuelist" /></td>
+  <td class="firstchild">
+  <input type="submit" value="Save" name="eventSubmit_doSelectattributes" />&#160; 
+  <input type="submit" value="Cancel" name="eventSubmit_doCancel" />&#160; 
+  <input type="submit" value="Reset to default"  name="eventSubmit_doCancel" />&#160;
+  <input type="submit" value="Go to issue list"  name="eventSubmit_doGoissuelist" />
+  </td>
  </tr>
 </table>
 </div>
+
 <h3>Attributes</h3>
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
  <tr>
@@ -24,21 +36,25 @@ $page.setTitle("Add/remove attributes from view")
   <th>Attribute name</th>
   <th>Columnar sequence</th>
  </tr>
+
  #foreach ($moduleAttribute in $moduleAttributes)
   #set ($checked = "")
   #set ($attribute = $moduleAttribute.Attribute)
   #set ($userAttribute = $user.getModuleUserAttribute($module.ModuleId, $attribute.AttributeId))
   #set ($intakeUserAttr = $intake.RModuleUserAttribute.mapTo($userAttribute))
+
 ## Get the attributes user has selected. If they have not select any,
 ## Use defaults in database.
+
   #set ($rmuas = $user.getRModuleUserAttributes($module))
   #if ($rmuas.isEmpty() || $usedefaults.equals("true"))
    #set ($rmuas = $module.DefaultRModuleUserAttributes)
   #end
+  
   #set ($order = 1)
   #foreach ($moduleUserAttribute in $rmuas)
    #if ($attribute.Name.equals($moduleUserAttribute.Attribute.Name))
-    #set ($checked = "checked\=\"checked\"")
+    #set ($checked = "checked")
     #set ($order = $moduleUserAttribute.Order)
    #end
   #end
@@ -51,12 +67,20 @@ $page.setTitle("Add/remove attributes from view")
   </tr>
  #end
 </table>
-<div class="functnbar2"><table cellpadding="4" cellspacing="0" border="1">
+
+<div class="functnbar2">
+<table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td class="firstchild"><input type="submit" value="Save" name="eventSubmit_doSelectattributes" />&nbsp; <input type="submit" value="Cancel" name="eventSubmit_doCancel" />&nbsp; <input type="submit" value="Reset to default"  name="eventSubmit_doCancel" /> <input type="submit" value="Go to issue list"  name="eventSubmit_doGoissuelist" /></td>
+  <td class="firstchild">
+  <input type="submit" value="Save" name="eventSubmit_doSelectattributes" />&#160; 
+  <input type="submit" value="Cancel" name="eventSubmit_doCancel" />&#160; 
+  <input type="submit" value="Reset to default"  name="eventSubmit_doCancel" />&#160; 
+  <input type="submit" value="Go to issue list"  name="eventSubmit_doGoissuelist" />
+  </td>
  </tr>
 </table>
 </div>
+
 $intake.declareGroups()
 </form>
 </div>
