--- a/src/templates/screens/Login.vm
+++ b/src/templates/screens/Login.vm
@@ -1,8 +1,15 @@
-<div class="app" id="loginDONOTCHANGETHISID">
 $page.setTitle("Login to Scarab")
+<div class="app" id="loginDONOTCHANGETHISID">
+
 <h2>$page.Title</h2>
-<p>New users, <a href="$link.setPage("Register.vm")"><strong>register here</strong></a>.</p>
+
+<p>New users, 
+ <a href="$link.setPage("Register.vm")"><strong>register here</strong></a>.</p>
+
+<h3>Login</h3>
+
 #set ($paramNext = $data.Parameters.getString($scarabG.Constant.NEXT_TEMPLATE))
+
 <form action="$link.setPage("Login.vm")" method="post" name="login">
   <input type="hidden" name="action" value="Login" />
 #if ($nextTemplate && $nextTemplate.length() > 0)
@@ -16,25 +23,28 @@ $page.setTitle("Login to Scarab")
 #set ($loginGroup = $intake.Login.Default)
 <div class="axial">
 <table cellpadding="3" cellspacing="2" border="0">
-<tr>
-<th>Email address</th>
-<td>
-<input name="$loginGroup.Username.Key" value="$!loginGroup.Username.Value" size="25" type="text" />
-#fieldErrorMsg ($loginGroup.Username "")
-</td>
-</tr>
-<tr>
-<th>Password</th>
-<td>
-<input name="$loginGroup.Password.Key" value="" size="25" type="password" />
-#fieldErrorMsg ($loginGroup.Password "")
-</td>
-</tr>
-<tr>
-<td>&#160;</td><td><input type="submit" name="eventSubmit_doLogin" value="Login" /></td>
-</tr>
+ <tr>
+  <th>Email address</th>
+  <td>
+  <input name="$loginGroup.Username.Key" value="$!loginGroup.Username.Value" size="25" type="text" />
+  #fieldErrorMsg ($loginGroup.Username "")
+  </td>
+ </tr>
+ <tr>
+  <th>Password</th>
+  <td>
+  <input name="$loginGroup.Password.Key" value="" size="25" type="password" />
+  #fieldErrorMsg ($loginGroup.Password "")
+  </td>
+ </tr>
+ <tr>
+  <td>&#160;</td>
+  <td><input type="submit" name="eventSubmit_doLogin" value="Login" /></td>
+ </tr>
 </table>
 </div>
+
 $intake.declareGroups()
+
 </form>
 </div>
