--- a/src/templates/screens/SelectModule.vm
+++ b/src/templates/screens/SelectModule.vm
@@ -1,6 +1,7 @@
 #set ($userModules = $data.User.Modules)
 #set ($currentModule = $scarabR.CurrentModule)
 <div id="selectmodule" class="app">
+
 #if ($currentModule)
 <h3>Current module</h3>
 <table cellpadding="3" cellspacing="2" border="1" width="100%">
@@ -9,11 +10,16 @@
     <th>Current module desc</th>
 </tr>
 <tr>
-    <td>$currentModule.Name</td>
+    <td>
+    $currentModule.Name
+    #set ($canEdit = $security.hasPermission("Module | Edit", $curModule))
+    #if ($canEdit)<a href="$link.setPage("ModifyModule.vm")">(Edit)</a>#end
+    </td>
     <td>$currentModule.Description</td>
 </tr>
 </table>
 #end
+
 <h3>New module selection</h3>
 #if ($userModules.size() > 0)
 <form action="$link.setPage("SelectModule.vm").setAction("SelectModule")" method="get">
@@ -27,6 +33,7 @@
     <th>Module name</th>
     <th>Module desc</th>
 </tr>
+
 #foreach ($module in $userModules)
 #indexedRows($velocityCount)
 <td>
@@ -41,11 +48,14 @@ $module.Description
 </td>
 </tr>
 #end
+
 </table>
+
 <p>
 <input type="submit" name="eventSubmit_doSelect" value="Select Module" />
 </p>
 </form>
+
 #else
 <p><strong class="alert">
 Sorry, you do not have access to select any other modules. Please
@@ -53,5 +63,6 @@ Sorry, you do not have access to select any other modules. Please
 has permissions to select a Module.
 </strong></p>
 #end
+
 </div>
 </div>
